--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
 	<!-- Styles -->
 	<link rel="stylesheet" href="../Proyecto-JS-y-JQuery/css/styles.css">
 
+	
+	<!--- Slider -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+
 	<!-- MisScripts-->
-	<script src="../Proyecto-JS-y-JQuery/js/main.js"></script>
+	<script src="js/main.js"></script>
+
 </head>
 <body>
 	<section id="global">
@@ -33,7 +40,15 @@
 		<!-- slider -->
 		<div id="slider">
 
-		</div>
+			<div class="bxslider">
+				<div><img src="img/cielo.jpg" title="blue sky"></div>
+				<div><img src="img/hojas.jpg" title="tree leaves"></div>
+				<div><img src="img/rojo.jpg" title="red tree leaves"></div>
+			  </div>
+			
+		 </div>
+		 
+			
 
 		<!-- content -->
 		<section id="content">
