--- a/reloj.html
+++ b/reloj.html
@@ -1,101 +1,132 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Proyecto con JavaScript</title>
 
-<!DOCTYPE HTML>
-<html lang="es">
-	<head>
-		<meta charset="utf-8" />
-		<title>Proyecto con JavaScript</title>
-
-		<!-- Estilos CSS -->
-		<link rel="stylesheet" type="text/css" href="css/styles.css" />
-		<link id="theme" rel="stylesheet" type="text/css" href="css/green.css" />
-
-		<!-- jQuery -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<!-- Styles -->
+	<link rel="stylesheet" href="../Proyecto-JS-y-JQuery/css/styles.css">
+	<link id="theme" rel="stylesheet" href="../Proyecto-JS-y-JQuery/css/green.css">
 	
-		<!-- Moment -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.0/moment.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.0/locale/es.js"></script>
+	<!-- JQuery -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
-		<!-- Mis Scripts -->
-		<script type="text/javascript" src="js/main.js"></script>
-	</head>
-	<body>
-		<div id="selector-theme">
-			<div id="to-green"></div>
-			<div id="to-red"></div>
-			<div id="to-blue"></div>
-		</div>
+	<link rel="stylesheet" href="js/jquery-ui-1.13.1/jquery-ui.css">
+	<link rel="stylesheet" href="js/jquery-ui-1.13.1/jquery-ui.structure.min.css">
+	<link rel="stylesheet" href="js/jquery-ui-1.13.1/jquery-ui.theme.css">
 
-		<section id="global">
+	<script type="text/javascript" src="js/jquery-ui-1.13.1/jquery-ui.min.js"></script>
+	
+	<!-- MisScripts-->
+	<script src="js/main.js"></script>
 
-			<!-- Cabecera -->
-			<header>
-				<div id="logo">
-					<h1>Proyecto JS</h1>
-				</div>
+</head>
+<body>
 
-				<div class="clearfix"></div>
+	<div id="select-theme">
+		<div id="to-green"></div>
+		<div id="to-red"></div>
+		<div id="to-blue"></div>
+	</div>
+	<section id="global">
+		<!-- header -->
+		<header>
+			<div id="logo">
+				<h1>PROYECTO JS</h1>
+			</div>
 
-				<nav id="menu">
-					<ul>
-						<li><a href="index.html">Inicio</a></li>
-						<li><a href="reloj.html">Reloj</a></li>
-						<li><a href="about.html">Sobre mi</a></li>
-						<li><a href="contact.html">Contacto</a></li>
-					</ul>
-				</nav>
-			</header>
+			<div class="clearfix"></div>
+			<nav id="menu">
+				<ul >
+					<li><a href="../Proyecto-JS-y-JQuery/index.html">Home</a></li>
+					<li><a href="../Proyecto-JS-y-JQuery/reloj.html">Clock</a></li>
+					<li><a href="../Proyecto-JS-y-JQuery/about.html">About me</a></li>
+					<li><a href="../Proyecto-JS-y-JQuery/contact.html">Contact</a></li>
+				</ul>
+			</nav>
+		</header>
+		
+		<!-- content -->
+		<section id="content">
 
-
-			<!-- Contenido -->
-			<section id="content">
-
-				<div id="box">
-					<!-- Cargar reloj -->
-					<div id="reloj"></div>
-				
-				</div>
-
-				<aside id="sidebar">
-					<div id="about">
-						<h4><span>¿Quien soy?</span></h4>
-						<img src="img/caracol.jpg" />
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet malesuada erat, ac ullamcorper justo.</p>
+			<div id="box">
+				<!-- upload  POST from JSON-->
+				<h2>About Me</h2>
+				<div id="acordeon">
+					
+					<h3>How we are?</h3>
+					<div>
+						<p>Lorem ipsum dolor, sit amet consectetur 
+							adipisicing elit. Doloribus totam, sint 
+							pariatur nostrum recusandae voluptates porro 
+							sit nam voluptas iste laboriosam saepe praesentium
+							 doloremque, laudantium 
+							vel quidem consequuntur et voluptatibus.</p>
+					</div>
+					<h3>Our Services</h3>
+					<div>
+						<p>Lorem ipsum dolor, sit amet consectetur 
+							adipisicing elit. Doloribus totam, sint 
+							pariatur nostrum recusandae voluptates porro 
+							sit nam voluptas iste laboriosam saepe praesentium
+							 doloremque, laudantium 
+							vel quidem consequuntur et voluptatibus.</p>
+					</div>
+					<h3>Our Customers</h3>
+					<div>
+						<p>Lorem ipsum dolor, sit amet consectetur 
+							adipisicing elit. Doloribus totam, sint 
+							pariatur nostrum recusandae voluptates porro 
+							sit nam voluptas iste laboriosam saepe praesentium
+							 doloremque, laudantium 
+							vel quidem consequuntur et voluptatibus.</p>
 					</div>
 
-					<div id="login">
-						<h4><span>Identificate</span></h4>
-						<form>
-							<label for="name">
-								Nombre
-							</label>
-							<input type="text" name="name" id="form_name"/>
+				</div>
+			</div>
+			<aside id="sidebar">
+				<div id="about">
+					<h4><span>How I am?</span></h4>
+					<img src="../Proyecto-JS-y-JQuery/img/caracol.jpg" alt="caracol">
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+						Aspernatur, ab fuga. Officiis molestias necessitatibus dolore 
+						ipsam neque praesentium, provident esse ipsa, quos illum veniam 
+						similique 
+						distinctio quia minima? Inventore, suscipit.</p>
+				</div>
 
-							<label for="email">
-								Correo
-							</label>
-							<input type="text" name="email" />
+				<div id="login">
+					<h4><span>Login</span></h4>
+					<form >
+						<label for="username">Username</label>
+						<input type="text" name="username" id="username">
+						<br>
+						<label for="email" >Email</label>
+						<br>
+						<input type="email" name="email" id="email">
+						<label for="password">Password</label>
+						<input type="password" name="password" id="password">
+						<br>
+						<input type="submit" value="Send">
+					</form>
 
-							<label for="password">
-								Contraseña
-							</label>
-							<input type="password" name="password" />
+				</div>
+			</aside>
 
-							<input type="submit" value="Entrar" />
-						</form>
-					</div>
-
-				</aside>
-
-				<div class="clearfix"></div>
-			</section>
+			<div class="clearfix"></div>
 
 		</section>
+	</section>
 
-		<footer>
-			Master de JavaScript de Víctor Robles &copy;
+	<footer>
+		Develop by Americo Roca &copy; 2022
 
-			<a href="#" class="subir">Ir arriba</a>
-		</footer>
-	</body>
+		<a href="#" class="up">Up</a>
+
+	</footer>
+
+	
+</body>
 </html>
