--- a/contact.html
+++ b/contact.html
@@ -1,129 +1,122 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Proyecto con JavaScript</title>
 
-<!DOCTYPE HTML>
-<html lang="es">
-	<head>
-		<meta charset="utf-8" />
-		<title>Proyecto con JavaScript</title>
-
-		<!-- Estilos CSS -->
-		<link rel="stylesheet" type="text/css" href="css/styles.css" />
-		<link id="theme" rel="stylesheet" type="text/css" href="css/green.css" />
-
-		<!-- jQuery -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<link rel="stylesheet" href="js/jquery-ui/jquery-ui.min.css" />
-		<link rel="stylesheet" href="js/jquery-ui/jquery-ui.structure.min.css" />
-		<link rel="stylesheet" href="js/jquery-ui/jquery-ui.theme.min.css" />
-		<script type="text/javascript" src="js/jquery-ui/jquery-ui.min.js"></script>
-
-		<!-- Plugin validacion -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
-
-		<!-- Mis Scripts -->
-		<script type="text/javascript" src="js/main.js"></script>
-	</head>
-	<body>
-		<div id="selector-theme">
-			<div id="to-green"></div>
-			<div id="to-red"></div>
-			<div id="to-blue"></div>
-		</div>
-
-		<section id="global">
-
-			<!-- Cabecera -->
-			<header>
-				<div id="logo">
-					<h1>Proyecto JS</h1>
-				</div>
-
-				<div class="clearfix"></div>
-
-				<nav id="menu">
-					<ul>
-						<li><a href="index.html">Inicio</a></li>
-						<li><a href="reloj.html">Reloj</a></li>
-						<li><a href="about.html">Sobre mi</a></li>
-						<li><a href="contact.html">Contacto</a></li>
-					</ul>
-				</nav>
-			</header>
-
-
-			<!-- Contenido -->
-			<section id="content">
-
-				<div id="box">
-					<!-- Cargar formulario -->
-					<h2>Contacto</h2>
-
-					<form action="" method="POST" id="form_contact">
-						<label for="name">Nombre</label>
-						<input type="text" name="name" data-validation="alphanumeric" />
-
-						<label for="surname">Apellidos</label>
-						<input type="text" name="surname" data-validation="alphanumeric" />
-
-						<label>Email</label>
-						<input type="email" name="email" data-validation="email"/>
-
-						<label for="sex">Sexo</label>
-						<select name="sex" data-validation="required">
-							<option value="men">Hombre</option>
-							<option value="woman">Mujer</option>
-						</select>
-
-						<label for="date">Fecha de nacimiendo</label>
-						<input type="text" name="date" data-validation="date" data-validation-format="dd-mm-yyyy"/>
-
-						<label for="years">Edad</label>
-						<input type="number" name="years" data-validation="number"/>
-
-						<input type="submit" value="Enviar" />
-					</form>
+	<!-- Styles -->
+	<link rel="stylesheet" href="../Proyecto-JS-y-JQuery/css/styles.css">
+	<link id="theme" rel="stylesheet" href="../Proyecto-JS-y-JQuery/css/green.css">
 	
+	<!-- JQuery -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+	<link rel="stylesheet" href="js/jquery-ui-1.13.1/jquery-ui.css">
+	<link rel="stylesheet" href="js/jquery-ui-1.13.1/jquery-ui.structure.min.css">
+	<link rel="stylesheet" href="js/jquery-ui-1.13.1/jquery-ui.theme.css">
+	<script type="text/javascript" src="js/jquery-ui-1.13.1/jquery-ui.min.js"></script>
+	
+	<!-- Validation Plugin --> 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
+	
+	<!-- MisScripts-->
+	<script src="js/main.js"></script>
+
+</head>
+<body>
+
+	<div id="select-theme">
+		<div id="to-green"></div>
+		<div id="to-red"></div>
+		<div id="to-blue"></div>
+	</div>
+	<section id="global">
+		<!-- header -->
+		<header>
+			<div id="logo">
+				<h1>PROYECTO JS</h1>
+			</div>
+
+			<div class="clearfix"></div>
+			<nav id="menu">
+				<ul >
+					<li><a href="../Proyecto-JS-y-JQuery/index.html">Home</a></li>
+					<li><a href="../Proyecto-JS-y-JQuery/reloj.html">Clock</a></li>
+					<li><a href="../Proyecto-JS-y-JQuery/about.html">About me</a></li>
+					<li><a href="../Proyecto-JS-y-JQuery/contact.html">Contact</a></li>
+				</ul>
+			</nav>
+		</header>
+		
+		<!-- content -->
+		<section id="content">
+
+			<div id="box">
+				<!-- Contact form -->
+				<h2>Contact</h2>
+				<form action="" id="form-contact" method="post">
+					<label for="name">Name</label>
+					<input type="text" name="name" data-validation="alphanumeric" data-validation-length="">
+					<label for="surname">Surname</label>
+					<input type="text"name="surname" data-validation="alphanumeric">
+					<label for="email">Email</label>
+					<input type="email" name="email" data-validation="email">
+					<label for="gender">Gender</label>
+					<select name="gender" id="gender" data-validation="required">
+						<option value="man">Man</option>
+						<option value="woman">Woman</option>
+					</select>
+					<label for="date">Date Birth</label>
+					<input type="text" name="date" data-validation="date" data-validation-format="dd-mm-yyyy">
+					<br>
+					<input type="submit" value="Send">
+				</form>
+
+				</div>
+			</div>
+			<aside id="sidebar">
+				<div id="about">
+					<h4><span>How I am?</span></h4>
+					<img src="../Proyecto-JS-y-JQuery/img/caracol.jpg" alt="caracol">
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+						Aspernatur, ab fuga. Officiis molestias necessitatibus dolore 
+						ipsam neque praesentium, provident esse ipsa, quos illum veniam 
+						similique 
+						distinctio quia minima? Inventore, suscipit.</p>
 				</div>
 
-				<aside id="sidebar">
-					<div id="about">
-						<h4><span>¿Quien soy?</span></h4>
-						<img src="img/caracol.jpg" />
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet malesuada erat, ac ullamcorper justo.</p>
-					</div>
+				<div id="login">
+					<h4><span>Login</span></h4>
+					<form >
+						<label for="username">Username</label>
+						<input type="text" name="username" id="username">
+						<br>
+						<label for="email" >Email</label>
+						<br>
+						<input type="email" name="email" id="email">
+						<label for="password">Password</label>
+						<input type="password" name="password" id="password">
+						<br>
+						<input type="submit" value="Send">
+					</form>
 
-					<div id="login">
-						<h4><span>Identificate</span></h4>
-						<form>
-							<label for="name">
-								Nombre
-							</label>
-							<input type="text" name="name" id="form_name"/>
+				</div>
+			</aside>
 
-							<label for="email">
-								Correo
-							</label>
-							<input type="text" name="email" />
-
-							<label for="password">
-								Contraseña
-							</label>
-							<input type="password" name="password" />
-
-							<input type="submit" value="Entrar" />
-						</form>
-					</div>
-
-				</aside>
-
-				<div class="clearfix"></div>
-			</section>
+			<div class="clearfix"></div>
 
 		</section>
+	</section>
 
-		<footer>
-			Master de JavaScript de Víctor Robles &copy;
+	<footer>
+		Develop by Americo Roca &copy; 2022
 
-			<a href="#" class="subir">Ir arriba</a>
-		</footer>
-	</body>
+		<a href="#" class="up">Up</a>
+
+	</footer>
+
+	
+</body>
 </html>
